--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-
-}
 
 :root {
   --primary-color: rgb(30, 159, 171);
@@ -27,6 +22,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  
 }
 
 a {
@@ -134,9 +130,10 @@ ul li a:hover {
 
 .section {
   /* background-color: var(--body-color); */
-
   background: rgb(230, 238, 174);
   background: linear-gradient(90deg, rgba(230, 238, 174, 0) 0%, rgba(148, 233, 176, 0.40388655462184875) 100%);
+
+
 }
 
 .section__container {
@@ -352,6 +349,7 @@ p {
   .container {
     border: 2px solid black;
     display: grid;
+    align-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 10px;
@@ -394,6 +392,11 @@ p {
   margin: 20px 0px;
 
 }
+
+.content p {
+  font-size: 0.8rem;
+}
+
 
 .button {
   text-align: center;
@@ -478,7 +481,8 @@ textarea {
 }
 
 .form-button>.btn:hover {
-  background: #00B5E7;
+  background: #0064e7;
+  /*color changed*/
 }
 
 .form-button i {
@@ -487,29 +491,31 @@ textarea {
 }
 
 /* contact info */
-.contactme{
+.contactme {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+
 }
-contact-container{
+
+contact-container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60%;
-  
+
 }
-.email-icon{
+
+.email-icon {
   width: 36px;
   height: 36px;
 }
 
-.linkedin-icon{
+.linkedin-icon {
   width: 30px;
   height: 30px;
-  
+
 }
 
 .contact-info-container {
@@ -526,11 +532,13 @@ contact-container{
 
 
 }
-.contact-info-container span a{
+
+.contact-info-container span a {
   text-decoration: none;
   color: var(--text-light);
 }
-.contact-info-container span a:hover{
+
+.contact-info-container span a:hover {
   color: var(--first-color);
 }
 
@@ -553,6 +561,19 @@ footer {
   font-size: 14px;
   margin-top: 10px;
   margin-left: 10px;
+}
+
+footer a {
+  color: var(--first-color)
+}
+
+footer a:hover {
+  color: var(--text-light);
+}
+
+footer li {
+  display: none;
+
 }
 
 /* media queries */
@@ -610,16 +631,28 @@ footer {
     width: 100%;
   }
 
-  .about-info,
-  .contact-info {
+  .about-info {
     width: 80%;
   }
+
 
 
   .card {
-    width: 80%;
     margin-left: 10%;
+    width: 80%;
     margin-right: 10%;
 
   }
+
+
+
+  footer li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+
+
 }
