--- a/css/styles.css
+++ b/css/styles.css
@@ -428,17 +428,19 @@ p {
 /* ----- CONTACT FORM ----- */
 
 
-
 .form {
   display: flex;
   justify-content: center;
   align-content: center;
   align-items: center;
 }
-
+.contact-form{
+  margin-left: 8%;
+}
 .form-control {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
   width: 80%;
 }
@@ -491,59 +493,51 @@ textarea {
 }
 
 /* contact info */
-.contactme {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.contact-contains{
+ 
+  width:fit-content;
+  display:flex;
+  margin: auto;
 
-}
-
-contact-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-
-}
-
-.email-icon {
-  width: 36px;
-  height: 36px;
-}
-
-.linkedin-icon {
-  width: 30px;
-  height: 30px;
-
-}
-
-.contact-info-container {
-
-  display: flex;
-  overflow: auto;
-  align-items: center;
-  margin-top: 10px;
-  margin-left: 18%;
-  margin-right: 18%;
-  border: 2px solid var(--text-light);
+  border: 2px solid #AAA;
   border-radius: 10px;
-  padding: 15px 20px;
-
-
+  padding: 10px 30px;
+  gap: 10px;
 }
 
-.contact-info-container span a {
-  text-decoration: none;
+.email{
+  display: flex;
+  align-items: center;
+ 
+}
+
+.linkedin{
+  display: flex;
+  align-items: center;
+  gap: 2px;
+
+}
+.contact-contains a{
   color: var(--text-light);
 }
-
-.contact-info-container span a:hover {
+.contact-contains a:hover{
   color: var(--first-color);
 }
 
 
 
+.email-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.linkedin-icon {
+  display:flex;
+  align-items: center;
+  width: 26px;
+  height: 26px;
+
+}
 
 
 /* ----- FOOTER BOX ----- */
@@ -575,6 +569,7 @@ footer li {
   display: none;
 
 }
+
 
 /* media queries */
 
@@ -636,7 +631,6 @@ footer li {
   }
 
 
-
   .card {
     margin-left: 10%;
     width: 80%;
@@ -644,7 +638,17 @@ footer li {
 
   }
 
-
+  .contact-contains{
+    display: flex;
+    flex-direction: column;
+   
+  }
+  .email,.linkedin span a{
+   font-size: small;
+  }
+  .linkedin{
+    padding-left: 3px;
+  }
 
   footer li {
     list-style: none;
